@@ -19,6 +19,8 @@ HSAMPLE BASS_SamplePointer[SOUND_MAX_SAMPLES];
 HSTREAM BASS_3D_Mixdown;
 HFX     BASS_FXHandler[(int)SoundFilter::Count];
 
+HMODULE ADPCMLibrary = NULL; // Temporary hack for unexpected ADPCM codec unload on Win11 systems.
+
 SoundEffectSlot SoundSlot[SOUND_MAX_CHANNELS];
 SoundTrackSlot  SoundtrackSlot[(int)SoundTrackType::Count];
 
@@ -940,6 +942,9 @@ void Sound_Init(const std::string& gameDirectory)
 
 	if (!g_Configuration.EnableSound)
 		return;
+	
+	// HACK: Manually force-load ADPCM codec, because on Win11 systems it may suddenly unload otherwise.
+	ADPCMLibrary = LoadLibrary("msadp32.acm");
 
 	BASS_Init(g_Configuration.SoundDevice, 44100, BASS_DEVICE_3D, WindowsHandle, NULL);
 	if (Sound_CheckBASSError("Initializing BASS sound device", true))
@@ -997,11 +1002,15 @@ void Sound_Init(const std::string& gameDirectory)
 // Must be called on engine quit.
 void Sound_DeInit()
 {
-	if (g_Configuration.EnableSound)
-	{
-		TENLog("Shutting down BASS...", LogLevel::Info);
-		BASS_Free();
-	}
+	if (!g_Configuration.EnableSound)
+		return;
+
+	TENLog("Shutting down BASS...", LogLevel::Info);
+	BASS_Free();
+
+	// HACK: Manually unload previously loaded ADPCM codec.
+	if (ADPCMLibrary != NULL)
+		FreeLibrary(ADPCMLibrary);
 }
 
 bool Sound_CheckBASSError(const char* message, bool verbose, ...)
